style.scss
---
# Comment for Jekyll to process the frontmatter
---

$dark: #222;
$light: #FEFEFE;
$accent: #df5078;

body {
  margin: 0;
  line-height: 1.2;
  background-color: $light;
  font-family: -apple-system, "Helvetica Neue", Helvetica, "Segoe UI", Arial, sans-serif;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
  display: flex;
  flex-direction: column;
}

footer {
  font-size: .8em;
}

code {
  background-color: $dark;
  color: $light;
  font-family: Monaco, monospace;
  padding: .3em;
  border-radius: .3em;
  line-height: 1.7;
}

.content {
  padding: 1rem;
}

.aside {
  padding-left: 1em;
  background-color: $dark;
  color: $light;
  margin: 0;
  ul {
    padding-left: 0em;
    ul {
      padding-left: 1em;
    }
  }
  li {
    list-style-type: none;
  }
  a {
    color: $light;
    &:visited {
      color: darken($light,30%);
    }
  }
}

a {
  color: $accent;
  &:visited {
    color: darken($accent,30%);
  }
}

@media screen and (min-width: 40em) {
  .aside {
    display: flex;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    width: 18rem;
    padding-left: 0;
    justify-content: center;
    overflow-y: auto; // if viewport height is too low, make scrollable
    ul:first-child {
      margin-bottom: 4rem;
    }
  }
  .aside-content {
    align-self: center;
  }
  .content {
    width: 100%;
    margin-left: 18rem;
    padding: 2rem 6rem;
  }
  body {
    flex-direction: row;
  }
}
@media screen and (min-width: 50em) {
  .aside {
    width: 22rem;
  }
  .content {
    margin-left: 22rem;
  }
}

